Fix failing CI of `JDK 22` (#4517)